--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -23,4 +23,6 @@
 <link rel="import" href="../bower_components/iron-icons/social-icons.html" />
 <link rel="import" href="../bower_components/iron-icons/hardware-icons.html" />
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html" />
+<link rel="import" href="../bower_components/paper-spinner/paper-spinner.html" />
+<link rel="import" href="../bower_components/paper-progress/paper-progress.html" />
 <link rel="import" href="elements/admin-drawer/admin-drawer.html" />
