--- a/src/pages/care-plan/su-medical/su-medical.html
+++ b/src/pages/care-plan/su-medical/su-medical.html
@@ -39,6 +39,7 @@
 
       is: 'su-medical',
       ready:function(){
+        this.fire("pageLoaded");
         this.addEventListener("print", this.print);
       },
       properties:{
