--- a/src/pages/care-plan/su-profile/su-profile.html
+++ b/src/pages/care-plan/su-profile/su-profile.html
@@ -551,6 +551,7 @@
       is: 'su-profile',
       ready:function(){
         this.fire("pageLoaded");
+        this.addEventListener("print", this.print);
       },
       properties:{
         page:{
