added paper-progress to admin pages (need to figure out how to properly disable later). tweaked admin-drawer to properly close with function. added wait listener to su-care pages for toast validation.

--- a/src/pages/admin/ad-dash/ad-dash.html
+++ b/src/pages/admin/ad-dash/ad-dash.html
@@ -33,7 +33,10 @@
 
     Polymer({
 
-      is: 'ad-dash'
+      is: 'ad-dash',
+      ready:function(){
+        this.fire("pageLoaded");
+      }
 
     });
 
