--- a/src/pages/admin/ad-settings/ad-settings.html
+++ b/src/pages/admin/ad-settings/ad-settings.html
@@ -33,8 +33,10 @@
 
     Polymer({
 
-      is: 'ad-settings'
-
+      is: 'ad-settings',
+      ready:function(){
+        this.fire("pageLoaded");
+      }
     });
 
   </script>
