--- a/src/pages/admin/ad-users/ad-users.html
+++ b/src/pages/admin/ad-users/ad-users.html
@@ -311,6 +311,9 @@
     Polymer({
 
       is: 'ad-users',
+      ready:function(){
+        this.fire("pageLoaded");
+      },
       properties:{
         newAccount:{
           type:Object,
