--- a/src/elements/admin-drawer/admin-drawer.html
+++ b/src/elements/admin-drawer/admin-drawer.html
@@ -125,7 +125,7 @@
         }
       },
       close:function(){
-        this.$.adminDrawer.opened=false;
+        this.$.adminDrawer.close();
       }
     });
 
