--- a/src/pages/admin/ad-support/ad-support.html
+++ b/src/pages/admin/ad-support/ad-support.html
@@ -33,7 +33,10 @@
 
     Polymer({
 
-      is: 'ad-support'
+      is: 'ad-support',
+      ready:function(){
+        this.fire("pageLoaded");
+      }
 
     });
 
