--- a/src/pages/care-plan/su-care/su-care.html
+++ b/src/pages/care-plan/su-care/su-care.html
@@ -592,27 +592,28 @@
         return newText;
       },
       requirementsMet:function(data){
-        //suAgree suName guueySUDOA swAgree swName guueySWDOA
-        if(!data.suName){
-          this.fire("openToast", {toastText:"Please enter a service user for the agreement."});
-          return false;
-        } else if(!this.guueySUDOA){
-          this.fire("openToast", {toastText:"Please enter a date for when the service user agreed."});
-          return false;
-        } else if(!data.suAgree){
-          this.fire("openToast", {toastText:"Please ensure that the service user agrees by tapping on the agree button."});
-          return false;
-        } else if(!data.swName){
-          this.fire("openToast", {toastText:"Please enter a staff worker name for the agreement."});
-          return false;
-        } else if(!this.guueySWDOA){
-          this.fire("openToast", {toastText:"Please enter a date for when the staff worker agreed."});
-          return false;
-        } else if(!data.swAgree){
-          this.fire("openToast", {toastText:"Please ensure that the staff worker agrees by tapping on the agree button."});
-        } else {
-          return true;
-        };
+        if(data!=null){
+          if(!data.suName){
+            this.fire("openToast", {toastText:"Please enter a service user for the agreement."});
+            return false;
+          } else if(!this.guueySUDOA){
+            this.fire("openToast", {toastText:"Please enter a date for when the service user agreed."});
+            return false;
+          } else if(!data.suAgree){
+            this.fire("openToast", {toastText:"Please ensure that the service user agrees by tapping on the agree button."});
+            return false;
+          } else if(!data.swName){
+            this.fire("openToast", {toastText:"Please enter a staff worker name for the agreement."});
+            return false;
+          } else if(!this.guueySWDOA){
+            this.fire("openToast", {toastText:"Please enter a date for when the staff worker agreed."});
+            return false;
+          } else if(!data.swAgree){
+            this.fire("openToast", {toastText:"Please ensure that the staff worker agrees by tapping on the agree button."});
+          } else {
+            return true;
+          };
+        }
       },
       editQuery:function(query900, query750, query1100, query640){
         if(query640){
@@ -692,10 +693,6 @@
           this.customStyle["--main-fab-right"]="-25px";
           this.updateStyles();
         };
-      },
-      _stuff:function(){
-        console.log("stuff");
-        console.log(this.agreeData.suName);
       }
     });
 
