added vars to main app page to mark already loaded pages. added these to event fires from admin and care-plan pages. also added handler in my-app

--- a/src/pages/admin/ad-payment/ad-payment.html
+++ b/src/pages/admin/ad-payment/ad-payment.html
@@ -202,7 +202,7 @@
 
       is: 'ad-payment',
       ready:function(){
-        this.fire("pageloaded");
+        this.fire("pageLoaded", {page:this.page});
       },
       properties:{
         home:{
