--- a/src/pages/admin/ad-support/ad-support.html
+++ b/src/pages/admin/ad-support/ad-support.html
@@ -35,7 +35,7 @@
 
       is: 'ad-support',
       ready:function(){
-        this.fire("pageLoaded");
+        this.fire("pageLoaded", {page:this.page});
       }
 
     });
