--- a/src/pages/care-plan/su-care-review/su-care-review.html
+++ b/src/pages/care-plan/su-care-review/su-care-review.html
@@ -301,7 +301,7 @@
     Polymer({
       is: 'su-care-review',
       ready:function(){
-        this.fire("pageLoaded");
+        this.fire("pageLoaded", {page:this.page});
         this.addEventListener("print", this.print);
       },
       properties:{
