--- a/src/pages/care-plan/su-create/su-create.html
+++ b/src/pages/care-plan/su-create/su-create.html
@@ -186,7 +186,7 @@
 
       is: 'su-create',
       ready:function(){
-        this.fire("pageLoaded");
+        this.fire("pageLoaded", {page:this.page});
       },
       properties:{
         page:{
