--- a/src/pages/admin/ad-dash/ad-dash.html
+++ b/src/pages/admin/ad-dash/ad-dash.html
@@ -35,7 +35,7 @@
 
       is: 'ad-dash',
       ready:function(){
-        this.fire("pageLoaded");
+        this.fire("pageLoaded", {page:this.page});
       }
 
     });
