--- a/src/pages/admin/ad-profile/ad-profile.html
+++ b/src/pages/admin/ad-profile/ad-profile.html
@@ -176,7 +176,7 @@
     Polymer({
       is: 'ad-profile',
       ready:function(){
-        this.fire("pageLoaded");
+        this.fire("pageLoaded", {page:this.page});
       },
       properties:{
         home:{
