--- a/src/pages/admin/ad-settings/ad-settings.html
+++ b/src/pages/admin/ad-settings/ad-settings.html
@@ -35,7 +35,7 @@
 
       is: 'ad-settings',
       ready:function(){
-        this.fire("pageLoaded");
+        this.fire("pageLoaded", {page:this.page});
       }
     });
 
