--- a/src/pages/care-plan/su-goals/su-goals.html
+++ b/src/pages/care-plan/su-goals/su-goals.html
@@ -570,7 +570,7 @@
 
       is: 'su-goals',
       ready:function(){
-        this.fire("pageLoaded");
+        this.fire("pageLoaded", {page:this.page});
         this.addEventListener("print", this.print);
       },
       properties:{
