--- a/src/pages/care-plan/su-profile/su-profile.html
+++ b/src/pages/care-plan/su-profile/su-profile.html
@@ -550,7 +550,7 @@
 
       is: 'su-profile',
       ready:function(){
-        this.fire("pageLoaded");
+        this.fire("pageLoaded",{page:this.page});
         this.addEventListener("print", this.print);
       },
       properties:{
