--- a/src/pages/care-plan/su-risk/su-risk.html
+++ b/src/pages/care-plan/su-risk/su-risk.html
@@ -269,7 +269,7 @@
 
       is: 'su-risk',
       ready:function(){
-        this.fire("pageLoaded");
+        this.fire("pageLoaded", {page:this.page});
         this.addEventListener("print", this.print);
       },
       properties:{
