--- a/src/pages/care-plan/su-profile/su-profile.html
+++ b/src/pages/care-plan/su-profile/su-profile.html
@@ -566,6 +566,8 @@
         date:{
           observer:"_dateChanged"
         },
+        guueyDOA:"loading",
+        guueyDOB:"loading",
         //list of dropdown values for vaadin boxes... put in db???
         religions:{
           type:Array,
@@ -971,9 +973,14 @@
         }
       },
       requirementsMet:function(data){
-        if(Object.keys(data).length === 0 && data.constructor === Object){
-
+        if(Object.keys(data).length === 0 && data.constructor === Object && this.guueyDOB!="loading" && this.guueyDOA!="loading"){
+          console.log("no good");
+          console.log(data);
         } else {
+          console.log("ok");
+          console.log(data);
+          console.log(this.guueyDOB);
+          console.log(this.guueyDOA);
           if(!data.fName){
             this.fire("openToast", {toastText: "First name is required before saving the new service user."});
             return;
