--- a/src/pages/care-plan/su-care-review/su-care-review.html
+++ b/src/pages/care-plan/su-care-review/su-care-review.html
@@ -7,7 +7,7 @@
       id="agreeDB"
       app-name="main"
       data="{{agreeData}}"
-      path="homes/{{home}}/patients/{{patient}}/carePlanReview/careReviewSummary">
+      path="homes/{{home}}/patients/{{patient}}/carePlan/statementOfServiceUser">
     </firebase-document>
     <firebase-document
       id="confirmDB"
@@ -29,7 +29,7 @@
     <!-- db connection for printing-->
     <firebase-document
       id="printDB"
-      path="homes/{{home}}/patients/{{patient}}/carePlanReview"
+      path="homes/{{home}}/patients/{{patient}}/carePlan"
       app-name="main">
     </firebase-document>
 
@@ -197,9 +197,10 @@
               class="halfSizeLeft"
               home="{{home}}"
               patient="{{patient}}"
-              label="What service user will do to adress"
+              label="What service will the service user do?"
               label2="i.e. agree to the following"
-              listroute="homes/{{home}}/patients/{{patient}}/carePlan/whatWillTheServiceUserDo">
+              listroute="homes/{{home}}/patients/{{patient}}/carePlan/whatWillTheServiceUserDo"
+              section="{{whatWillTheServiceUserDo}}">
             </guuey-list-input>
 
             <guuey-list-input
@@ -207,7 +208,9 @@
               home="{{home}}"
               patient="{{patient}}"
               label="Intervention by staff"
-              listroute="homes/{{home}}/patients/{{patient}}/carePlan/interventionByStaff">
+              label2="what will the staff do?"
+              listroute="homes/{{home}}/patients/{{patient}}/carePlan/interventionByStaff"
+              section="{{interventionByStaff}}">
             </guuey-list-input>
 
             <guuey-text-input
@@ -228,14 +231,14 @@
               </paper-input>
 
               <guuey-date-input
-                route="homes/{{home}}/patients/{{patient}}/carePlanReview/careReviewSummary/suNameDate"
+                route="/homes/{{home}}/patients/{{patient}}/carePlan/statementOfServiceUser/suDate"
                 label="Date">
               </guuey-date-input>
 
               <div class="buttonContainer">
-                <paper-button hidden="{{agreeData.suConfirm}}" on-tap="suConfirm">CONFIRM</paper-button>
+                <paper-button hidden="{{agreeData.suAgree}}" on-tap="suConfirm">CONFIRM</paper-button>
 
-                <paper-button hidden="{{!agreeData.suConfirm}}">CONFIRMED</paper-button>
+                <paper-button hidden="{{!agreeData.suAgree}}">CONFIRMED</paper-button>
               </div>
 
               <!--need to create a file input for this???-->
@@ -249,7 +252,7 @@
               </paper-input>
 
               <guuey-date-input
-                route="homes/{{home}}/patients/{{patient}}/carePlanReview/careReviewSummary/staffAgreementDate"
+                route="/homes/{{home}}/patients/{{patient}}/carePlan/statementOfServiceUser/swDate"
                 label="Date">
               </guuey-date-input>
 
@@ -263,7 +266,7 @@
               </paper-input>
 
               <guuey-date-input
-                route="homes/{{home}}/patients/{{patient}}/carePlanReview/careReviewSummary/agreementGivenDate"
+                route="homes/{{home}}/patients/{{patient}}/carePlan/statementOfServiceUser/agreementGivenDate"
                 label="Date">
               </guuey-date-input>
 
@@ -276,15 +279,15 @@
               </paper-input>
 
               <guuey-date-input
-                route="homes/{{home}}/patients/{{patient}}/carePlanReview/careReviewSummary/nextReviewDate"
+                route="homes/{{home}}/patients/{{patient}}/carePlan/statementOfServiceUser/nextReviewDate"
                 label="Next Review Date">
               </guuey-date-input>
 
               <div class="buttonContainer">
 
-                <paper-button hidden="{{agreeData.confirmAgreement}}" on-tap="cofirmAgreement">CONFIRM</paper-button>
+                <paper-button hidden="{{agreeData.swAgree}}" on-tap="cofirmAgreement">CONFIRM</paper-button>
 
-                <paper-button hidden="{{!agreeData.confirmAgreement}}">CONFIRMED</paper-button>
+                <paper-button hidden="{{!agreeData.swAgree}}">CONFIRMED</paper-button>
 
               </div>
 
@@ -367,17 +370,18 @@
       }
       },
       observers:[
-        "queryEdit(query640)"
+        "queryEdit(query640)",
+        "requirementsMet(agreeData)"
       ],
       suConfirm:function(){
         this.$.confirmDB.path=null;
         this.$.confirmDB.data=true;
-        this.$.confirmDB.save("/homes/"+this.home+"/patients/"+this.patient+"/carePlanReview/careReviewSummary/",'suConfirm');
+        this.$.confirmDB.save("/homes/"+this.home+"/patients/"+this.patient+"/carePlan/statementOfServiceUser/",'suAgree');
       },
       cofirmAgreement:function(){
         this.$.confirmDB.path=null;
         this.$.confirmDB.data=true;
-        this.$.confirmDB.save("/homes/"+this.home+"/patients/"+this.patient+"/carePlanReview/careReviewSummary/",'confirmAgreement');
+        this.$.confirmDB.save("/homes/"+this.home+"/patients/"+this.patient+"/carePlan/statementOfServiceUser/",'swAgree');
       },
       createNewSection:function(){
         this.$.customInput.path=null;
@@ -471,6 +475,32 @@
           }
         }
         return newText;
+      },
+      requirementsMet:function(data){
+        if(Object.keys(data).length === 0 && data.constructor === Object){
+          //do nothing and wait for change
+          console.log("no good");
+        } else {
+          console.log("good");
+          if(!data.suDate){
+            this.fire("openToast",{toastText:"Service user date of agreement is required."});
+            return false;
+          } else if(!data.swDate){
+            this.fire("openToast",{toastText:"Staff worker date of agreement is required."});
+            return false;
+          } else if(!data.suAgree){
+            this.fire("openToast",{toastText:"The service user needs to agree to the agreement."});
+            return false;
+          } else if(!data.swAgree){
+            this.fire("openToast",{toastText:"The staff worker needs to agree to the agreement."});
+            return false;
+          } else if(!data.swName){
+            this.fire("openToast",{toastText:"A service worker must be selected for this agreement."});
+            return false;
+          } else {
+            return true;
+          };
+        };
       },
       queryEdit:function(query640){
         if(query640){
