--- a/src/pages/test/test-test/dependencies.html
+++ b/src/pages/test/test-test/dependencies.html
@@ -9,6 +9,7 @@
 <link rel="import" href="../../../../bower_components/paper-icon-button/paper-icon-button.html"/>
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
+<link rel="import" href="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
 <!--not needed?
 
 
@@ -66,7 +67,7 @@
 needed
   firebase-query
   firebase-document
-  
+
   paper-dialog
   paper-button
   paper-fab
